--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.dropbox.core:dropbox-core-sdk:3.0.8'
     implementation 'com.j256.ormlite:ormlite-android:5.1'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
-
