--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,39 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.marcell.taskmanager">
 
-    <!--Internet permission is needed for dropbox communication-->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- Internet permission is needed for dropbox communication -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".ProcessActivity"
+            android:name=".UI.TaskManagerActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.GET_CONTENT"/>
+                <action android:name="android.intent.action.GET_CONTENT" />
+
                 <data android:scheme="file" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddEditTaskActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation">
+        <activity
+            android:name=".UI.EditTaskActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
 
-        </activity>
+        <service
+            android:name=".Notification.TaskNotificationService"
+            android:enabled="true"
+            android:exported="false" />
+
+        <activity android:name=".UI.SettingsActivity"></activity>
     </application>
 
 </manifest>
