--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.GET_CONTENT" />
-
-                <data android:scheme="file" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+
+                <action android:name="android.intent.action.GET_CONTENT" />
             </intent-filter>
         </activity>
         <activity
@@ -40,7 +38,7 @@
             android:enabled="true"
             android:exported="false" />
 
-        <activity android:name=".UI.SettingsActivity"></activity>
+        <activity android:name=".UI.SettingsActivity"/>
     </application>
 
 </manifest>
